# lilly-steering

./: .gitignore  README.md  pyproject.toml
core/: __init__.py
core/active_inference/: __init__.py  belief_store.py  belief_updater.py  generative_model.py  graph_entropy.py  observation_encoder.py  policy_selector.py  semantic_entropy.py
core/affect/: __init__.py  emotional_field.py  wave_packet.py
core/cognitive/: __init__.py  anchor_discovery.py  anchors.py  concept_diversity.py  continuity.py  curator_schemas.py  curator_tools.py  episode.py  episode_orchestrator.py  episode_saturation.py  episode_selector.py  evocation.py  exploration.py  faithfulness.py  goal.py  halt_collector.py  halt_probe.py  halt_trainer.py  knowledge_probe.py  letta_continuity.py  loop.py  narration_buffer.py  opening_tracker.py  orchestrator.py  polarity.py  position_hints.py  saturation.py  segment_prompts.py  segment_router.py  signal_collector.py  simulation_tools.py  skill_generator.py  stage.py  stage_prompt.py  state.py  telemetry.py  telemetry_evaluator.py  tension.py  thought_reflector.py  types.py  (+1 more)
core/content/: __init__.py  chunker.py  extractor.py  parser.py
core/dreams/: __init__.py  base.py  micro_dream.py
core/embedding/: __init__.py  service.py
core/identity/: __init__.py  affective_resonator.py  auditor.py  autobiographical_self.py  consolidation.py  creed.py  integrator.py  intuition_bank.py
core/inference/: __init__.py  rag.py
core/model/: __init__.py  curator_model.py  hooked_qwen.py  mox_model.py  preflexor_model.py
tests/: conftest.py
(+218 files in other folders)
