[project]
name = "lilly-steering"
version = "0.1.0"
description = "Affect-driven activation steering for LLMs: Evalatis evolutionary steering, 8D Plutchik emotional field, memory-driven AffectiveResonator"
requires-python = ">=3.11"
dependencies = [
    "transformer-lens @ git+https://github.com/TransformerLensOrg/TransformerLens.git@4b69393",
    "sae-lens>=6.0.0",
    "torch>=2.0.0",
    "falkordb>=1.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
